--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "leven-sort",
   "version": "1.1.3",
+  "files": "index.js",
   "description": "Simply sort by similarity, starring Levenshtein via leven",
   "keywords": [
     "sort",
@@ -27,23 +28,28 @@
     "objects",
     "arrays"
   ],
-  "files": ["index.js"],
+  "files": [
+    "index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/musocrat/leven-sort"
   },
   "homepage": "https://github.com/musocrat/leven-sort",
-  "author": "Andrew Carpenter <andrew@musocrat.com> (https://github.com/musocrat)",
+  "author": "Andrew Carpenter",
   "bugs": {
     "email": "andrew@musocrat.com",
     "url": "https://github.com/musocrat/leven-sort/issues"
   },
   "main": "index.js",
-  "scripts": {},
-  "author": "Andrew Carpenter",
+  "scripts": {
+    "test": "ava --verbose"
+  },
   "license": "MIT",
-  "devDependencies": {},
   "dependencies": {
     "leven": "^2.0.0"
+  },
+  "devDependencies": {
+    "ava": "^0.25.0"
   }
 }
