--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "leven-sort",
-  "version": "1.1.3",
-  "files": "index.js",
+  "version": "1.2.0",
+  "main": "index.js",
+  "files": [
+    "index.js"
+  ],
   "description": "Simply sort by similarity, starring Levenshtein via leven",
   "keywords": [
     "sort",
@@ -28,9 +31,6 @@
     "objects",
     "arrays"
   ],
-  "files": [
-    "index.js"
-  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/musocrat/leven-sort"
@@ -41,15 +41,14 @@
     "email": "andrew@musocrat.com",
     "url": "https://github.com/musocrat/leven-sort/issues"
   },
-  "main": "index.js",
   "scripts": {
-    "test": "ava --verbose"
+    "test": "node test"
   },
   "license": "MIT",
   "dependencies": {
-    "leven": "^2.0.0"
+    "leven": "^2.1.0"
   },
   "devDependencies": {
-    "ava": "^0.25.0"
+    "mvt": "^2.0.1"
   }
 }
