--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "leven-sort",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "main": "index.js",
+  "type": "module",
   "files": [
     "index.js"
   ],
@@ -46,9 +47,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "leven": "^3.1.0"
+    "leven": "^4.0.0"
   },
   "devDependencies": {
-    "mvt": "^2.0.1"
+    "mvt": "^5.0.0-beta.1",
+    "standard": "^17.0.0"
   }
 }
